--- a/frontend/packages/website/docs/API/FHIR/Endpoints/SearchSystem.mdx
+++ b/frontend/packages/website/docs/API/FHIR/Endpoints/SearchSystem.mdx
@@ -8,71 +8,72 @@ sidebar_position: 8
 
 The FHIR [system-level search operation](https://www.hl7.org/fhir/http.html#search) allows you to search across all resource types on the FHIR server. This is done using an HTTP GET request to the root endpoint with query parameters.
 
-## Endpoint
+import Tabs from '@theme/Tabs';
+import TabItem from '@theme/TabItem';
 
-```
-GET /w/[tenant]/api/v1/[project]/fhir/r4?[search parameters]
-```
+<Tabs>
+<TabItem value="cli" label="CLI" default>
 
-The search is performed across all resource types in the system.
+Search across all resource types using the Haste Health CLI:
 
-## Query Parameters
-
-Common search parameters include:
-
-- `_type` - Limit search to specific resource types (e.g., `_type=Patient,Observation`)
-- `_id` - Search by resource ID
-- `_lastUpdated` - Search by last updated date
-- `_tag` - Search by tag
-- `_profile` - Search by profile
-- `_content` - Search in the narrative content
-- `_text` - Search in the narrative text
-
-Example: `GET /w/[tenant]/api/v1/[project]/fhir/r4?_type=Patient&_lastUpdated=ge2025-01-01`
-
-## Response
-
-If the search is successful, the server will respond with a `200 OK` status code and a Bundle containing the matching resources from all types.
-
-```
-HTTP/1.1 200 OK
-Content-Type: application/fhir+json
+```bash
+haste-health api search_system r4 "_type=Patient,Observation&_lastUpdated=ge2025-01-01"
 ```
 
-```json
-{
-  "resourceType": "Bundle",
-  "type": "searchset",
-  "total": 3,
-  "entry": [
-    {
-      "fullUrl": "http://api.haste.health/w/[tenant]/api/v1/[project]/fhir/r4/Patient/12345",
-      "resource": {
-        "resourceType": "Patient",
-        "id": "12345",
-        "name": [
-          {
-            "use": "official",
-            "family": "Doe",
-            "given": ["John"]
-          }
-        ]
-      }
-    },
-    {
-      "fullUrl": "http://api.haste.health/w/[tenant]/api/v1/[project]/fhir/r4/Observation/67890",
-      "resource": {
-        "resourceType": "Observation",
-        "id": "67890",
-        "status": "final",
-        "code": {
-          "text": "Blood Pressure"
-        }
-      }
-    }
-  ]
-}
+This command searches for Patient and Observation resources updated on or after January 1, 2025.
+
+You can also perform a system-level search without parameters:
+
+```bash
+haste-health api search_system r4
 ```
+
+</TabItem>
+<TabItem value="typescript" label="TypeScript">
+
+Search across all resource types using the TypeScript client:
+
+```typescript
+import { AsynchronousClient } from '@haste-health/client';
+import { R4 } from '@haste-health/fhir-types/versions';
+
+// Assuming you have a configured client
+const client: AsynchronousClient<{}> = /* ... */;
+
+const searchResults = await client.search_system(
+  {},
+  R4,
+  '_type=Patient,Observation&_lastUpdated=ge2025-01-01'
+);
+
+console.log('Total matches:', searchResults.total);
+console.log('Resources found:', searchResults.resources);
+
+// You can also use parsed parameters
+import { parseQuery } from '@haste-health/client/url';
+
+const searchWithParsed = await client.search_system(
+  {},
+  R4,
+  parseQuery('_type=Patient,Observation&_lastUpdated=ge2025-01-01')
+);
+```
+
+</TabItem>
+<TabItem value="curl" label="cURL">
+
+Search across all resource types using cURL:
+
+```bash
+curl -X GET "https://api.haste.health/w/[tenant]/api/v1/[project]/fhir/r4?_type=Patient,Observation&_lastUpdated=ge2025-01-01" \
+     -H "Content-Type: application/fhir+json" \
+     -H "Authorization: Bearer YOUR_ACCESS_TOKEN"
+```
+
+</TabItem>
+</Tabs>
+
+Replace `[tenant]` with your tenant name and `[project]` with your project ID.
 
 ## Error Handling
 
@@ -95,15 +96,3 @@ Content-Type: application/fhir+json
   ]
 }
 ```
-
-## Example using cURL
-
-Here is an example of how to perform a system-level search using cURL:
-
-```bash
-curl -X GET "http://api.haste.health/w/[tenant]/api/v1/[project]/fhir/r4?_type=Patient,Observation&_lastUpdated=ge2025-01-01" \
-     -H "Content-Type: application/fhir+json" \
-     -H "Authorization: Bearer YOUR_ACCESS_TOKEN"
-```
-
-This command sends a GET request to search for Patient and Observation resources updated on or after January 1, 2025.
