align with other use of Intro

--- a/frontend/packages/website/docs/API/FHIR/Intro.mdx
+++ b/frontend/packages/website/docs/API/FHIR/Intro.mdx
@@ -3,7 +3,7 @@ id: Intro
 sidebar_position: 0
 ---
 
-# Introduction to FHIR
+# Intro to FHIR
 
 FHIR (Fast Healthcare Interoperability Resources) is a standard developed by HL7 for exchanging healthcare information electronically. 
 It is designed to facilitate interoperability between different healthcare systems, enabling seamless sharing of clinical data across various platforms and applications.
