mod endpoint docs

--- a/frontend/packages/website/docs/API/FHIR/Endpoints/InvokeSystem.mdx
+++ b/frontend/packages/website/docs/API/FHIR/Endpoints/InvokeSystem.mdx
@@ -17,7 +17,7 @@ import TabItem from '@theme/TabItem';
 Invoke the `$export` operation at the system level using the Haste Health CLI:
 
 ```bash
-haste-health api invoke_system r4 export --file params.json
+haste-health api invoke-system export --file params.json
 ```
 
 Where `params.json` contains:
