--- a/frontend/packages/website/docs/API/FHIR/Endpoints/Patch.mdx
+++ b/frontend/packages/website/docs/API/FHIR/Endpoints/Patch.mdx
@@ -17,7 +17,7 @@ import TabItem from '@theme/TabItem';
 Patch a Patient resource using the Haste Health CLI:
 
 ```bash
-haste-health api patch r4 Patient 12345 --file patch.json
+haste-health api patch Patient 12345 --file patch.json
 ```
 
 Where `patch.json` contains JSON Patch operations:
