--- a/frontend/packages/website/docs/API/FHIR/Endpoints/SearchSystem.mdx
+++ b/frontend/packages/website/docs/API/FHIR/Endpoints/SearchSystem.mdx
@@ -17,7 +17,7 @@ import TabItem from '@theme/TabItem';
 Search across all resource types using the Haste Health CLI:
 
 ```bash
-haste-health api search_system r4 "_type=Patient,Observation&_lastUpdated=ge2025-01-01"
+haste-health api search-system "_type=Patient,Observation&_lastUpdated=ge2025-01-01"
 ```
 
 This command searches for Patient and Observation resources updated on or after January 1, 2025.
@@ -25,7 +25,7 @@ This command searches for Patient and Observation resources updated on or after 
 You can also perform a system-level search without parameters:
 
 ```bash
-haste-health api search_system r4
+haste-health api search-system
 ```
 
 </TabItem>
