--- a/frontend/packages/website/docs/API/FHIR/Endpoints/VersionRead.mdx
+++ b/frontend/packages/website/docs/API/FHIR/Endpoints/VersionRead.mdx
@@ -17,7 +17,7 @@ import TabItem from '@theme/TabItem';
 Read a specific version of a Patient resource using the Haste Health CLI:
 
 ```bash
-haste-health api vread r4 Patient 12345 1
+haste-health api version-read Patient 12345 1
 ```
 
 This command retrieves version 1 of the Patient resource with ID `12345`.
