--- a/frontend/packages/website/docs/API/FHIR/Endpoints/Create.mdx
+++ b/frontend/packages/website/docs/API/FHIR/Endpoints/Create.mdx
@@ -17,7 +17,7 @@ import TabItem from '@theme/TabItem';
 Create a Patient resource using the Haste Health CLI:
 
 ```bash
-haste-health api create r4 --file patient.json
+haste-health api create --file patient.json
 ```
 
 Where `patient.json` contains:
