--- a/frontend/packages/website/docs/API/FHIR/Endpoints/DeleteInstance.mdx
+++ b/frontend/packages/website/docs/API/FHIR/Endpoints/DeleteInstance.mdx
@@ -17,7 +17,7 @@ import TabItem from '@theme/TabItem';
 Delete a Patient resource using the Haste Health CLI:
 
 ```bash
-haste-health api delete r4 Patient 12345
+haste-health api delete-instance Patient 12345
 ```
 
 The CLI will prompt for confirmation before deleting the resource.
