--- a/frontend/packages/website/docs/API/FHIR/Endpoints/HistoryInstance.mdx
+++ b/frontend/packages/website/docs/API/FHIR/Endpoints/HistoryInstance.mdx
@@ -17,7 +17,7 @@ import TabItem from '@theme/TabItem';
 Retrieve the history of a Patient resource using the Haste Health CLI:
 
 ```bash
-haste-health api history_instance r4 Patient 12345 "_count=10"
+haste-health api history-instance Patient 12345 "_count=10"
 ```
 
 This command retrieves the last 10 versions of the Patient resource with ID `12345`.
@@ -25,7 +25,7 @@ This command retrieves the last 10 versions of the Patient resource with ID `123
 You can also retrieve history without parameters:
 
 ```bash
-haste-health api history_instance r4 Patient 12345
+haste-health api history-instance Patient 12345
 ```
 
 </TabItem>
