--- a/frontend/packages/website/docs/API/FHIR/Endpoints/HistoryType.mdx
+++ b/frontend/packages/website/docs/API/FHIR/Endpoints/HistoryType.mdx
@@ -17,7 +17,7 @@ import TabItem from '@theme/TabItem';
 Retrieve the history of all Patient resources using the Haste Health CLI:
 
 ```bash
-haste-health api history_type r4 Patient "_count=20&_since=2025-01-01"
+haste-health api history-type Patient "_count=20&_since=2025-01-01"
 ```
 
 This command retrieves the last 20 versions of Patient resources changed since January 1, 2025.
@@ -25,7 +25,7 @@ This command retrieves the last 20 versions of Patient resources changed since J
 You can also retrieve history without parameters:
 
 ```bash
-haste-health api history_type r4 Patient
+haste-health api history-type Patient
 ```
 
 </TabItem>
