--- a/frontend/packages/website/docs/API/FHIR/Endpoints/InvokeInstance.mdx
+++ b/frontend/packages/website/docs/API/FHIR/Endpoints/InvokeInstance.mdx
@@ -17,7 +17,7 @@ import TabItem from '@theme/TabItem';
 Invoke the `$everything` operation on a Patient resource using the Haste Health CLI:
 
 ```bash
-haste-health api invoke_instance r4 Patient 12345 everything --file params.json
+haste-health api invoke-instance Patient 12345 everything --file params.json
 ```
 
 Where `params.json` contains:
