--- a/frontend/packages/website/docs/API/FHIR/Endpoints/InvokeType.mdx
+++ b/frontend/packages/website/docs/API/FHIR/Endpoints/InvokeType.mdx
@@ -18,7 +18,7 @@ import TabItem from '@theme/TabItem';
 Invoke the `$validate` operation on the Patient resource type using the Haste Health CLI:
 
 ```bash
-haste-health api invoke_type r4 Patient validate --file params.json
+haste-health api invoke-type Patient validate --file params.json
 ```
 
 Where `params.json` contains:
