--- a/frontend/packages/website/docs/API/FHIR/Endpoints/Read.mdx
+++ b/frontend/packages/website/docs/API/FHIR/Endpoints/Read.mdx
@@ -17,7 +17,7 @@ import TabItem from '@theme/TabItem';
 Read a Patient resource using the Haste Health CLI:
 
 ```bash
-haste-health api read r4 Patient 12345
+haste-health api read Patient 12345
 ```
 
 This command retrieves the Patient resource with ID `12345` and outputs the result to the console.
