--- a/frontend/packages/website/docs/API/FHIR/Endpoints/SearchType.mdx
+++ b/frontend/packages/website/docs/API/FHIR/Endpoints/SearchType.mdx
@@ -17,7 +17,7 @@ import TabItem from '@theme/TabItem';
 Search for Patient resources using the Haste Health CLI:
 
 ```bash
-haste-health api search_type r4 Patient "name=Smith&birthdate=ge1980-01-01"
+haste-health api search-type Patient "name=Smith&birthdate=ge1980-01-01"
 ```
 
 This command searches for Patient resources with family name "Smith" born on or after January 1, 1980.
@@ -25,7 +25,7 @@ This command searches for Patient resources with family name "Smith" born on or 
 You can also search without parameters to get all resources of a type:
 
 ```bash
-haste-health api search_type r4 Patient
+haste-health api search-type Patient
 ```
 
 </TabItem>
