--- a/frontend/packages/website/docs/API/FHIR/Endpoints/Update.mdx
+++ b/frontend/packages/website/docs/API/FHIR/Endpoints/Update.mdx
@@ -19,7 +19,7 @@ import TabItem from '@theme/TabItem';
 Update a Patient resource using the Haste Health CLI:
 
 ```bash
-haste-health api update r4 Patient 12345 --file updated-patient.json
+haste-health api update Patient 12345 --file updated-patient.json
 ```
 
 Where `updated-patient.json` contains:
