alter resource type link

--- a/frontend/packages/website/docs/Authentication/Scopes.mdx
+++ b/frontend/packages/website/docs/Authentication/Scopes.mdx
@@ -245,7 +245,7 @@ Only valid FHIR resource types are accepted:
 - [OpenID Connect Core Specification](https://openid.net/specs/openid-connect-core-1_0.html)
 - [SMART App Launch Framework](https://hl7.org/fhir/smart-app-launch/)
 - [OAuth 2.0 Scopes](https://datatracker.ietf.org/doc/html/rfc6749#section-3.3)
-- [FHIR Resource Types](https://www.hl7.org/fhir/resourcelist.html)
+- [FHIR Resource Types](https://www.hl7.org/fhir/r4/resourcelist.html)
 
 ## Summary
 
